--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,15 @@
 # site.url, site.title
 
 title: 'DeafChi'
+description: 'The central hub in Chicago for the d/Deaf'
+author: 'Chicago Deaf Techies'
 
 ## note:
 #  use site.path in your templates to make it work for both protocols e.g. http and https
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
-path: "http://deafchi.com/"
 url:  'https://deafchi.com/'
-
+copyright: 'Copyright &copy; 2017 DeafChi. All Rights Reserved.'
+credits: 'Credits: made with love using Twitter Bootstrap.'
 
 ########
 # more settings
@@ -19,11 +21,8 @@ sass:
   sass_dir: css
   style:    expanded
 
-
-
 exclude:
 - README.rst
-
 
 safe: true
 lsi: false
