update travis in hope it fixes branch issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: ruby
 rvm:
   - 2.3.3
+before_script:
+  - chmod +x test_travis.sh
 script:
-  - bundle exec jekyll build
-  - bundle exec htmlproofer ./_site --only-4xx --check-favicon --chec-html --allow-hash-href
+  - ./test_travis.sh
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
