Feature/add convo page (#2)
* Update README

* add gems.lock for local development

* Set conversations.html grids for desktop

* media queries supports

* remove Gemfile.lock

* Fixes - so can get a clean travis

* fixing url config

* update travis in hope it fixes branch issue

* add root

* giordon is a moron

* Revert "update travis in hope it fixes branch issue"

This reverts commit 8f939501b7ccda789dc9f40dbeb6c30a14a7625e.

* typo in travis script

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author: 'Chicago Deaf Techies'
 ## note:
 #  use site.path in your templates to make it work for both protocols e.g. http and https
 #  use site.url only inside the web feed template (e.g. requires full url incl. protocol)
-url:  'https://deafchi.com/'
+url:  'https://deafchi.com'
 enforce_ssl: 'deafchi.com'
 copyright: 'Copyright &copy; 2017 DeafChi. All Rights Reserved.'
 credits: 'Credits: made with love using Twitter Bootstrap.'
@@ -24,6 +24,7 @@ sass:
 
 exclude:
 - README.rst
+- Gemfile.lock
 
 safe: true
 lsi: false
