--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,11 @@ social:
 ########
 # more settings
 
+collections:
+  people:
+    output: true
+    permalink: /conversations/:path
+
 markdown: kramdown
 
 sass:
@@ -51,6 +56,7 @@ sass:
 exclude:
 - README.rst
 - Gemfile.lock
+- css/bootstrap
 
 safe: true
 lsi: false
